[package]
name = "gatekeeper"
version = "0.1.2"
edition = "2021"

[features]
default = []
live_net = []

[dependencies]
async-trait = "0.1"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
openssl = { version = "0.10.75", features = ["vendored"] }
pingora = { version = "0.8.0", features = ["lb", "openssl"] }

[dev-dependencies]
reqwest = "0.13.2"
socket2 = "0.5"
tokio = { version = "1.50.0", features = ["test-util"] }
